# json-to-pdf

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.webui  Dockerfile.webui.dockerignore  Makefile  PLAN.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: audit.yml  test.yml
api/: __init__.py  handler.py
assets/: generate_abstract.py
docs/: 01-document-structure.md  02-styles-and-typography.md  03-content-types.md  04-tables.md  05-charts.md  06-cover-headers-footers.md  07-defaults-reference.md  08-limitations.md  10-lambda-api.md
examples/: basic_report.json  charts.json  dp.json  minimal.json  phase2_report.json  phase3_tables.json  phase4_toc.json  phase5_charts.json  rr.json  styled_report.json  tables.json  toc_report.json
examples/compose/: composure_demo.json
infra/: README.md  api.tf  backend.tf  ecr.tf  lambda.tf  outputs.tf  providers.tf  s3.tf  variables.tf
infra/bootstrap/: main.tf
infra/local/: ministack-override.yml
pdfgen/: accessibility.py  assets.py  cli.py  compose.py  defaults.json  engine.py  fonts.py  merger.py  renderer.py  sourcemap.py  styles.py  utils.py
pdfgen.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
pdfgen/elements/: chart.py  image.py  list_element.py  primitives.py  table.py  toc.py
pdfgen/templates/: doc.py  page.py
tests/: conftest.py  test_accessibility.py  test_api_handler.py  test_assets.py  test_compose.py  test_doc.py  test_elements_list.py  test_elements_primitives.py  test_elements_table.py  test_elements_toc.py  test_engine.py  test_fonts.py  test_merger.py  test_render.py  test_styles.py  test_utils.py  test_webui.py
webui/: __init__.py  __main__.py  schemas.py  server.py
webui/static/: app.js  compose.js  index.html  mode.js  preview.js  style.css  sync.js
