[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdfgen"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "reportlab>=4.2",
    "click>=8.1",
    "matplotlib>=3.8",
    "Pillow>=10.0",
    "pikepdf>=8.0",
]

[project.optional-dependencies]
api = [
    "boto3>=1.34",
]
dev = [
    "pytest>=7",
    "pytest-cov>=4",
    "pip-audit>=2",
    "boto3>=1.34",
]

[project.scripts]
pdfgen = "pdfgen.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["pdfgen*"]

[tool.setuptools.package-data]
pdfgen = ["defaults.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
pythonpath = ["."]
